--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
     "api"
   ],
   "author": "Nicolas A. Hilbert",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.3.0-alpha1"
-  }
+  "license": "ISC"
 }
